[package]
name = "diaryx_plugin_sdk"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
description = "SDK for building Diaryx Extism WASM plugins"
license = "MIT"
repository = "https://github.com/diaryx-org/plugin-sdk"
publish = true

[lib]
crate-type = ["rlib"]

[features]
default = ["core"]

# Core host functions: file I/O, storage, logging, timestamps.
# Always needed — this is the baseline for any plugin.
core = []

# HTTP request support (requires `http` permission).
http = []

# Secret store for credentials (requires `secrets` permission).
secrets = []

# WebSocket bridge for real-time communication (requires `ws` permission).
ws = []

# Event emission to the host application.
events = []

# Inter-plugin command execution (requires `plugin_command` permission).
plugins = []

# Runtime context from the host.
context = []

# WASI module execution inside the plugin sandbox.
wasi = []

# User-provided file requests.
files = []

# Custom getrandom implementation for WASM plugins.
# Enables both getrandom 0.2 (via patched crate) and 0.3.
getrandom-shim = ["dep:getrandom_03"]

# Enable all features.
full = ["core", "http", "secrets", "ws", "events", "plugins", "context", "wasi", "files", "getrandom-shim"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Optional: getrandom 0.3 for the shim (0.2 is handled via patched crate in consuming plugin).
# The getrandom 0.2 patch lives in patches/getrandom-0.2/ — downstream plugins
# should add [patch.crates-io] getrandom = { path = "../plugin-sdk/patches/getrandom-0.2" }
getrandom_03 = { package = "getrandom", version = "0.3", optional = true, default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
